@@ -279,6 +279,18 @@ to create a .hud file</dd>
 <dt>dropweapon</dt>
 <dd>Drops the player's primary weapon.</dd>
 
+<dt>sclogin [password]</dt>
+<dd>Logs the player into shoutcasting mode.</dd>
+
+<dt>sclogout</dt>
+<dd>Removes the player's own shoutcaster status.</dd>
+
+<dt>shoutcastlogin [password]</dt>
+<dd>Logs the player into shoutcasting mode.</dd>
+
+<dt>shoutcastlogout</dt>
+<dd>Removes the player's own shoutcaster status.</dd>
+
 <dt>timerSet [1-60]</dt>
 <dd>Sets enemy spawntimer (shown in red). You need to give the value for the timer. 
 Not giving any value will disable the spawntimer.</dd>
