@@ -62,6 +62,7 @@ g_script.c
 g_script_actions.c
 g_session.c
 g_sha1.c
+g_shoutcaster.c
 g_spawn.c
 g_stats.c
 g_sv_entities.c
