@@ -23,70 +23,76 @@ typedef struct {
 
 // VC optimizes for dup strings :)
 static const cmd_reference_t aCommandInfo[] = {
-	{ "+stats",			qtrue,	qtrue,	NULL, ":^7 HUD overlay showing current weapon stats info" },
-	{ "+topshots",		qtrue,	qtrue,	NULL, ":^7 HUD overlay showing current top accuracies of all players" },
-	{ "?"		,		qtrue,	qtrue,	G_commands_cmd, ":^7 Gives a list of OSP-specific commands" },
-	{ "autorecord",		qtrue,	qtrue,	NULL, ":^7 Creates a demo with a consistent naming scheme" },
-	{ "autoscreenshot",	qtrue,	qtrue,	NULL, ":^7 Creates a screenshot with a consistent naming scheme" },
-	{ "bottomshots",	qtrue,	qfalse,	G_weaponRankings_cmd, ":^7 Shows WORST player for each weapon. Add ^3<weapon_ID>^7 to show all stats for a weapon" },
-//	{ "callvote",		qtrue,	qfalse,	Cmd_CallVote_f, " <params>:^7 Calls a vote" },
-	{ "callvote",		qtrue,	qfalse,	(void(*)(gentity_t *, unsigned int, qboolean))Cmd_CallVote_f, " <params>:^7 Calls a vote" },
-//	{ "captains",		qtrue,	qtrue,	NULL, ":^7 Shows team captains" },
-//	{ "coach",			qtrue,	qtrue,	NULL, ":^7 Accepts coach invitation/restarts coach view" },
-//	{ "coachdecline",	qtrue,	qtrue,	NULL, ":^7 Declines coach invitation or resigns coach status" },
-//	{ "coachinvite",	qtrue,	qtrue,	NULL, " <player_ID>:^7 Invites a player to coach team" },
-//	{ "coachkick",		qtrue,	qtrue,	NULL, " <player_ID>:^7 Kicks active coach from team" },
-	{ "commands",		qtrue,	qtrue,	G_commands_cmd, ":^7 Gives a list of OSP-specific commands" },
-	{ "currenttime",	qtrue,	qtrue,	NULL, ":^7 Displays current local time" },
-	{ "follow",			qfalse,	qtrue,	Cmd_Follow_f, " <player_ID|allies|axis>:^7 Spectates a particular player or team" },
-//	{ "invite",			qtrue,	qtrue,	NULL, " <player_ID>:^7 Invites a player to join a team" },
-	{ "lock",			qtrue,	qtrue,	G_lock_cmd, ":^7 Locks a player's team to prevent others from joining" },
-	{ "notready",		qtrue,	qfalse,	G_ready_cmd, ":^7 Sets your status to ^5not ready^7 to start a match" },
-	{ "pause",			qfalse,	qtrue,	G_pause_cmd, ":^7 Allows a team to pause a match" },
-	{ "players",		qtrue,	qtrue,	G_players_cmd, ":^7 Lists all active players and their IDs/information" },
-	{ "ready",			qtrue,	qtrue,	G_ready_cmd, ":^7 Sets your status to ^5ready^7 to start a match" },
-	{ "readyteam",		qfalse,	qtrue,	G_teamready_cmd, ":^7 Sets an entire team's status to ^5ready^7 to start a match" },
-	{ "ref",			qtrue,	qtrue,	G_ref_cmd, " <password>:^7 Become a referee (admin access)" },
-//	{ "remove",			qtrue,	qtrue,	NULL, " <player_ID>:^7 Removes a player from the team" },
-//	{ "resign",			qtrue,	qtrue,	NULL, " [player_ID]:^7 Resigns captainship.  Can optionally be given to another teammate" },
-	{ "say_teamnl",		qtrue,	qtrue,	G_say_teamnl_cmd, "<msg>:^7 Sends a team chat without location info" },
-	{ "scores",			qtrue,	qtrue,	G_scores_cmd, ":^7 Displays current match stat info" },
-	{ "specinvite",		qtrue,	qtrue,	G_specinvite_cmd, ":^7 Invites a player to spectate a speclock'ed team" },
-	{ "speclock",		qtrue,	qtrue,	G_speclock_cmd, ":^7 Locks a player's team from spectators" },
-//	{ "speconly",		qtrue,	qtrue,	NULL, ":^7 Toggles option to stay as a spectator in 1v1" },
-	{ "specunlock",		qtrue,	qfalse,	G_speclock_cmd, ":^7 Unlocks a player's team from spectators" },
-	{ "statsall",		qtrue,	qfalse,	G_statsall_cmd, ":^7 Shows weapon accuracy stats for all players" },
-	{ "statsdump",		qtrue,	qtrue,	NULL, ":^7 Shows player stats + match info saved locally to a file" },
+	{ "+stats",				qtrue,	qtrue,	NULL, ":^7 HUD overlay showing current weapon stats info" },
+	{ "+topshots",			qtrue,	qtrue,	NULL, ":^7 HUD overlay showing current top accuracies of all players" },
+	{ "?"		,			qtrue,	qtrue,	G_commands_cmd, ":^7 Gives a list of OSP-specific commands" },
+	{ "autorecord",			qtrue,	qtrue,	NULL, ":^7 Creates a demo with a consistent naming scheme" },
+	{ "autoscreenshot",		qtrue,	qtrue,	NULL, ":^7 Creates a screenshot with a consistent naming scheme" },
+	{ "bottomshots",		qtrue,	qfalse,	G_weaponRankings_cmd, ":^7 Shows WORST player for each weapon. Add ^3<weapon_ID>^7 to show all stats for a weapon" },
+//	{ "callvote",			qtrue,	qfalse,	Cmd_CallVote_f, " <params>:^7 Calls a vote" },
+	{ "callvote",			qtrue,	qfalse,	(void(*)(gentity_t *, unsigned int, qboolean))Cmd_CallVote_f, " <params>:^7 Calls a vote" },
+//	{ "captains",			qtrue,	qtrue,	NULL, ":^7 Shows team captains" },
+//	{ "coach",				qtrue,	qtrue,	NULL, ":^7 Accepts coach invitation/restarts coach view" },
+//	{ "coachdecline",		qtrue,	qtrue,	NULL, ":^7 Declines coach invitation or resigns coach status" },
+//	{ "coachinvite",		qtrue,	qtrue,	NULL, " <player_ID>:^7 Invites a player to coach team" },
+//	{ "coachkick",			qtrue,	qtrue,	NULL, " <player_ID>:^7 Kicks active coach from team" },
+	{ "commands",			qtrue,	qtrue,	G_commands_cmd, ":^7 Gives a list of OSP-specific commands" },
+	{ "currenttime",		qtrue,	qtrue,	NULL, ":^7 Displays current local time" },
+	{ "follow",				qfalse,	qtrue,	Cmd_Follow_f, " <player_ID|allies|axis>:^7 Spectates a particular player or team" },
+//	{ "invite",				qtrue,	qtrue,	NULL, " <player_ID>:^7 Invites a player to join a team" },
+	{ "lock",				qtrue,	qtrue,	G_lock_cmd, ":^7 Locks a player's team to prevent others from joining" },
+	{ "notready",			qtrue,	qfalse,	G_ready_cmd, ":^7 Sets your status to ^5not ready^7 to start a match" },
+	{ "pause",				qfalse,	qtrue,	G_pause_cmd, ":^7 Allows a team to pause a match" },
+	{ "players",			qtrue,	qtrue,	G_players_cmd, ":^7 Lists all active players and their IDs/information" },
+	{ "ready",				qtrue,	qtrue,	G_ready_cmd, ":^7 Sets your status to ^5ready^7 to start a match" },
+	{ "readyteam",			qfalse,	qtrue,	G_teamready_cmd, ":^7 Sets an entire team's status to ^5ready^7 to start a match" },
+	{ "ref",				qtrue,	qtrue,	G_ref_cmd, " <password>:^7 Become a referee (admin access)" },
+//	{ "remove",				qtrue,	qtrue,	NULL, " <player_ID>:^7 Removes a player from the team" },
+//	{ "resign",				qtrue,	qtrue,	NULL, " [player_ID]:^7 Resigns captainship.  Can optionally be given to another teammate" },
+	{ "say_teamnl",			qtrue,	qtrue,	G_say_teamnl_cmd, "<msg>:^7 Sends a team chat without location info" },
+	// pheno: shoutcast - short commands
+	{ "sclogin",			qtrue,	qfalse,	G_sclogin_cmd, " <password>:^7 Become a shoutcaster" },
+	{ "sclogout",			qtrue,	qfalse,	G_sclogout_cmd, ":^7 Removes shoutcaster status" },
+	{ "scores",				qtrue,	qtrue,	G_scores_cmd, ":^7 Displays current match stat info" },
+	// pheno: shoutcast - long commands
+	{ "shoutcastlogin",		qtrue,	qfalse,	G_sclogin_cmd, " <password>:^7 Become a shoutcaster" },
+	{ "shoutcastlogout",	qtrue,	qfalse,	G_sclogout_cmd, ":^7 Removes shoutcaster status" },
+	{ "specinvite",			qtrue,	qtrue,	G_specinvite_cmd, ":^7 Invites a player to spectate a speclock'ed team" },
+	{ "speclock",			qtrue,	qtrue,	G_speclock_cmd, ":^7 Locks a player's team from spectators" },
+//	{ "speconly",			qtrue,	qtrue,	NULL, ":^7 Toggles option to stay as a spectator in 1v1" },
+	{ "specunlock",			qtrue,	qfalse,	G_speclock_cmd, ":^7 Unlocks a player's team from spectators" },
+	{ "statsall",			qtrue,	qfalse,	G_statsall_cmd, ":^7 Shows weapon accuracy stats for all players" },
+	{ "statsdump",			qtrue,	qtrue,	NULL, ":^7 Shows player stats + match info saved locally to a file" },
 	// CHRUKER: b012 - Was missing
-	{ "stoprecord", qtrue, qtrue, NULL, ":^7 Stops a demo recording currently in progress" },
-	{ "team",			qtrue,	qtrue,	Cmd_Team_f, " <b|r|s>:^7 Joins a team (b = allies, r = axis, s = spectator)" },
-	{ "class",			qtrue,  qtrue,  Cmd_Class_f, " <s|e|m|f|c>:^7 Selects a class for the next spawn (s=soldier e=engineer m=medic f=field-ops c=covert-ops)" },
-	{ "nextteam",		qtrue,  qtrue,  Cmd_NextTeam_f, " <b|r|s>:^7 Selects a team to change to after the next class command" },
-	{ "timein",			qfalse,	qfalse,	G_pause_cmd, ":^7 Unpauses a match (if initiated by the issuing team)" },
-	{ "timeout",		qfalse,	qtrue,	G_pause_cmd, ":^7 Allows a team to pause a match" },
-	{ "topshots",		qtrue,	qtrue,	G_weaponRankings_cmd, ":^7 Shows BEST player for each weapon. Add ^3<weapon_ID>^7 to show all stats for a weapon" },
-	{ "unlock",			qtrue,	qfalse,	G_lock_cmd, ":^7 Unlocks a player's team, allowing others to join" },
-	{ "unpause",		qfalse,	qfalse,	G_pause_cmd, ":^7 Unpauses a match (if initiated by the issuing team)" },
-	{ "unready",		qtrue,	qfalse,	G_ready_cmd, ":^7 Sets your status to ^5not ready^7 to start a match" },
-	{ "weaponstats",	qtrue,	qfalse,	G_weaponStats_cmd, " [player_ID]:^7 Shows weapon accuracy stats for a player" },
-//	{ "viewcam",		qfalse,	qtrue,	NULL, ":^7 Switches to cinematic camera mode" },
-//	{ "vc_follow",		qfalse,	qtrue,	NULL, " [player_ID]:^7 Puts viewcam in follow mode.  Can optionally to follow a specific player" },
-//	{ "vc_free",		qfalse,	qtrue,	NULL, ":^7 Toggle viewcam between manual/automatic change" },
-//	{ "vc_view",		qfalse,	qtrue,	NULL, ":^7 Toggle ViewCam between static/dynamic views" },
-//	{ "viewadd",		qfalse,	qtrue,	NULL, " <player_ID>:^7 Adds a player to multi-screen view" },
-//	{ "viewall",		qfalse,	qtrue,	NULL, ":^7 Adds all active players to a multi-screen view" },
-//	{ "viewallies",		qfalse,	qtrue,	NULL, ": ^7 Views entire allies/axis team" },
-//	{ "viewaxis",		qfalse,	qtrue,	NULL, ": ^7 Views entire allies/axis team" },
-//	{ "viewcyclenext",	qfalse,	qtrue,	NULL, ":^7 Cycles through players in current view" },
-//	{ "viewfollow",		qfalse,	qtrue,	NULL, ":^7 Follows current highlighted view" },
-//	{ "viewnext",		qfalse,	qtrue,	NULL, ":^7 Moves through active screen in a multi-screen display" },
-//	{ "viewnone",		qfalse,	qtrue,	NULL, ":^7 Disables multiview mode and goes back to spectator mode" },
-//	{ "viewremove",		qfalse,	qtrue,	NULL, " [player_ID]:^7 Removes current selected or specific player from multi-screen view" },
+	{ "stoprecord",			qtrue,	qtrue,	NULL, ":^7 Stops a demo recording currently in progress" },
+	{ "team",				qtrue,	qtrue,	Cmd_Team_f, " <b|r|s>:^7 Joins a team (b = allies, r = axis, s = spectator)" },
+	{ "class",				qtrue,  qtrue,  Cmd_Class_f, " <s|e|m|f|c>:^7 Selects a class for the next spawn (s=soldier e=engineer m=medic f=field-ops c=covert-ops)" },
+	{ "nextteam",			qtrue,  qtrue,  Cmd_NextTeam_f, " <b|r|s>:^7 Selects a team to change to after the next class command" },
+	{ "timein",				qfalse,	qfalse,	G_pause_cmd, ":^7 Unpauses a match (if initiated by the issuing team)" },
+	{ "timeout",			qfalse,	qtrue,	G_pause_cmd, ":^7 Allows a team to pause a match" },
+	{ "topshots",			qtrue,	qtrue,	G_weaponRankings_cmd, ":^7 Shows BEST player for each weapon. Add ^3<weapon_ID>^7 to show all stats for a weapon" },
+	{ "unlock",				qtrue,	qfalse,	G_lock_cmd, ":^7 Unlocks a player's team, allowing others to join" },
+	{ "unpause",			qfalse,	qfalse,	G_pause_cmd, ":^7 Unpauses a match (if initiated by the issuing team)" },
+	{ "unready",			qtrue,	qfalse,	G_ready_cmd, ":^7 Sets your status to ^5not ready^7 to start a match" },
+	{ "weaponstats",		qtrue,	qfalse,	G_weaponStats_cmd, " [player_ID]:^7 Shows weapon accuracy stats for a player" },
+//	{ "viewcam",			qfalse,	qtrue,	NULL, ":^7 Switches to cinematic camera mode" },
+//	{ "vc_follow",			qfalse,	qtrue,	NULL, " [player_ID]:^7 Puts viewcam in follow mode.  Can optionally to follow a specific player" },
+//	{ "vc_free",			qfalse,	qtrue,	NULL, ":^7 Toggle viewcam between manual/automatic change" },
+//	{ "vc_view",			qfalse,	qtrue,	NULL, ":^7 Toggle ViewCam between static/dynamic views" },
+//	{ "viewadd",			qfalse,	qtrue,	NULL, " <player_ID>:^7 Adds a player to multi-screen view" },
+//	{ "viewall",			qfalse,	qtrue,	NULL, ":^7 Adds all active players to a multi-screen view" },
+//	{ "viewallies",			qfalse,	qtrue,	NULL, ": ^7 Views entire allies/axis team" },
+//	{ "viewaxis",			qfalse,	qtrue,	NULL, ": ^7 Views entire allies/axis team" },
+//	{ "viewcyclenext",		qfalse,	qtrue,	NULL, ":^7 Cycles through players in current view" },
+//	{ "viewfollow",			qfalse,	qtrue,	NULL, ":^7 Follows current highlighted view" },
+//	{ "viewnext",			qfalse,	qtrue,	NULL, ":^7 Moves through active screen in a multi-screen display" },
+//	{ "viewnone",			qfalse,	qtrue,	NULL, ":^7 Disables multiview mode and goes back to spectator mode" },
+//	{ "viewremove",			qfalse,	qtrue,	NULL, " [player_ID]:^7 Removes current selected or specific player from multi-screen view" },
 //
 //TODO: move this out of the OSP specific section! (quad)
-	{ "hitsounds",		qtrue,	qtrue,	G_hitsounds_cmd, ":^7 toggles hitsounds"},
-	{ "dropweapon", qtrue, qtrue, G_dropWeapon_cmd, ":^7 drops your primary weapon"}, // Terifire
-	{ 0,				qfalse,	qtrue,  NULL, 0 }
+	{ "hitsounds",			qtrue,	qtrue,	G_hitsounds_cmd, ":^7 toggles hitsounds"},
+	{ "dropweapon",			qtrue,	qtrue,	G_dropWeapon_cmd, ":^7 drops your primary weapon"}, // Terifire
+	{ 0,					qfalse,	qtrue,	NULL, 0 }
 };
 
 
